# pyaedt-qt-ui

./: README.rst  pyproject.toml  tox.ini
doc/source/: conf.py
examples/: Readout_Sheets_HFSS_Widgets.py  simple_radar_module_2TX_3RX.aedt
examples/Component_Placement_HFSS/: Component_Placement_HFSS.py  Component_Placement_HFSS_Widgets.py  rf_switchodb.tgz
examples/GeneralizedPush_Excitation/: Generalized_Push_Excitation.py
examples/Generalized_Push_Excitation/: Q3__Segments_template_PCB_EXP3D_general_Pushed_OP.aedtz
examples/Readout_Sheets_HFSS/: Microstrip_Project.aedt  Readout_Sheets_HFSS.py  Readout_Sheets_HFSS_(main).py  Readout_Sheets_HFSS_Gui.py
examples/Replacing_Components_HFSS3d/: Component_Placement_HFSS.py  Component_Placement_HFSS_GUI.py  odb.tgz
examples/Without_Qt5/: CreateFarFieldReport.py
requirements/: requirements_doc.txt
tests/: test_metadata.py
